--- a/mingw-w64-libpq/PKGBUILD
+++ b/mingw-w64-libpq/PKGBUILD
@@ -4,15 +4,15 @@ _realname=libpq
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Libraries for use with PostgreSQL (mingw-w64)"
 arch=('any')
 url="https://www.postgresql.org/"
 license=('custom:PostgreSQL')
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+             "winpty")
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-zlib"
-         "winpty")
+         "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('staticlibs' 'strip')
 source=("https://ftp.postgresql.org/pub/source/v${pkgver}/postgresql-${pkgver}.tar.bz2"
         only-static2.patch)
