--- a/mingw-w64-libwebp/PKGBUILD
+++ b/mingw-w64-libwebp/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libwebp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.6.0
+pkgver=1.0.2
 pkgrel=1
 pkgdesc="the WebP library. Includes conversion tools (mingw-w64)"
 arch=('any')
@@ -14,14 +14,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-giflib"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtiff")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
-source=(http://downloads.webmproject.org/releases/webp/${_realname}-${pkgver}.tar.gz{,.asc})
-sha256sums=('c928119229d4f8f35e20113ffb61f281eda267634a8dc2285af4b0ee27cf2b40'
-            'SKIP')
+source=(https://storage.googleapis.com/downloads.webmproject.org/releases/webp/${_realname}-${pkgver}.tar.gz)
+sha256sums=('3d47b48c40ed6476e8047b2ddb81d93835e0ca1b8d3e8c679afbb3004dd564b1')
 validpgpkeys=('6B0E6B70976DE303EDF2F601F9C3D6BDB8232B5D')
-
-prepare() {
-  cd ${srcdir}/${_realname}-${pkgver}
-}
 
 build() {
   mkdir -p ${srcdir}/${MINGW_CHOST}
@@ -33,8 +28,6 @@ build() {
     --prefix=${MINGW_PREFIX} \
     --enable-static \
     --disable-shared \
-    --enable-swap-16bit-csp \
-    --enable-experimental \
     --enable-libwebpmux \
     --enable-libwebpdemux \
     --enable-libwebpdecoder \
