--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.12.0
+pkgver=0.13.0
 pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
@@ -14,7 +14,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-gcc")
 options=("staticlibs" "strip" "!buildflags")
-source=("http://arrowlib.rstudio.com/dev/apache-arrow-0.13.0.tar.gz")
+source=("http://arrowlib.rstudio.com/dev/apache-${_realname}-${pkgver}.tar.gz")
 sha256sums=("e859c58d354e2b3b8bb93dfe55ae0f598a6f346c7c2bd60e9a5613c79c3caac4")
 
 cmake_build_type=release
