avoid syntax error in prepare stage

--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -25,6 +25,8 @@ cpp_build_dir=build-${CARCH}-cpp
 c_glib_build_dir=build-${CARCH}-c-glib
 
 prepare() {
+  pushd ${source_dir}
+  popd
 }
 
 build() {
