--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ matrix:
   fast_finish: true
 
 build_script:
-  - rmdir /s C:\OpenSSL-Win32
+  - rmdir /s /Q C:\OpenSSL-Win32
   - C:\msys64\usr\bin\pacman --noconfirm --ask 20 --sync --refresh --refresh --sysupgrade --sysupgrade
   - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/ci-build.sh"
 #  - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/fullindex.sh"
