arrow: build from git

--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,9 +3,8 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.12.9000
-srcver=0.13.0
-pkgrel=2
+pkgver=0.12.0.9000
+pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
 url="https://arrow.apache.org/"
@@ -17,15 +16,21 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-gcc")
 options=("staticlibs" "strip" "!buildflags")
-source=("http://arrowlib.rstudio.com/dev/apache-${_realname}-${srcver}.tar.gz")
-sha256sums=("a8ecb0453c5269869dcb6446cf834a5a36591bd9e846be9baf2ebe48a7027160")
+source=("${_realname}"::"git+https://github.com/apache/arrow")
+sha256sums=("SKIP")
 
 cmake_build_type=release
 meson_build_type=debugoptimized
 
-source_dir=apache-${_realname}-${srcver}
+#source_dir=${_realname}-${pkgver}
+source_dir=${_realname}
 cpp_build_dir=build-${CARCH}-cpp
 c_glib_build_dir=build-${CARCH}-c-glib
+
+pkgver() {
+  cd "$source_dir"
+  grep Version r/DESCRIPTION | cut -d " " -f 2
+}
 
 prepare() {
   pushd ${source_dir}
