arrow: use new cmake parameters

--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -69,8 +69,8 @@ build() {
     -DARROW_USE_GLOG=OFF \
     -DARROW_BUILD_UTILITIES=ON \
     -DARROW_TEST_LINKAGE="static" \
-	-DTHRIFT_HOME="${MINGW_PREFIX}" \
-	-DDOUBLE_CONVERSION_HOME="${MINGW_PREFIX}"
+    -Ddouble-conversion_ROOT="${MINGW_PREFIX}" \
+    -DThrift_ROOT="${MINGW_PREFIX}"
 
   make
   popd
