--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -64,7 +64,7 @@ build() {
     -DARROW_JEMALLOC=OFF \
     -DARROW_BUILD_SHARED=OFF\
     -DARROW_BOOST_VENDORED=OFF \
-    -DARROW_WITH_ZLIB=OFF \
+    -DARROW_WITH_ZLIB=ON \
     -DARROW_WITH_BROTLI=OFF \
     -DARROW_USE_GLOG=OFF \
     -DARROW_BUILD_UTILITIES=ON \
