--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,5 +25,5 @@ jobs:
         continueOnError: true
         condition: and(succeeded(), eq(variables['system.pullrequest.isfork'], false))
         inputs:
-          pathtoPublish: $(SYSTEM_DEFAULTWORKINGDIRECTORY)/artifacts
-          artifactName: $(MINGW_INSTALLS)
+          pathtoPublish: "$(Build.SourcesDirectory)/artifacts"
+          artifactName: "$(MINGW_INSTALLS)"
