--- a/mingw-w64-python3/PKGBUILD
+++ b/mingw-w64-python3/PKGBUILD
@@ -17,8 +17,8 @@ _realname=python3
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _pybasever=3.7
-pkgver=${_pybasever}.1
-pkgrel=9200
+pkgver=${_pybasever}.3
+pkgrel=9300
 pkgdesc="A high-level scripting language (mingw-w64)"
 arch=('any')
 license=('PSF')
@@ -102,7 +102,6 @@ source=("https://www.python.org/ftp/python/${pkgver%rc?}/Python-${pkgver}.tar.xz
         0820-dont-link-with-gettext.patch
         0830-ctypes-python-dll.patch
         0840-gdbm-module-includes.patch
-        0845-3.7-_abs-mingw.patch
         0850-use-gnu_printf-in-format.patch
         0870-mingw-fix-ssl-dont-use-enum_certificates.patch
         0890-mingw-build-optimized-ext.patch
@@ -122,11 +121,13 @@ source=("https://www.python.org/ftp/python/${pkgver%rc?}/Python-${pkgver}.tar.xz
         1800-link-win-resource-files-and-build-pythonw.patch
         1810-3.7-mpdec-mingw.patch
         1830-mingw-implement-setenv-for-PY_COERCE_C_LOCALE.patch
-        1840-fix-building-core-modules.patch
         1850-disable-readline.patch
         1860-fix-isselectable.patch
         2000-warnings-fixes.patch
         1900-ctypes-dont-depend-on-internal-libffi.patch
+        2010-configure-have-inet-pton.patch
+        2020-use-_wcsnicmp-instead-wcsncasecmp.patch
+        2030-fix-msvc9-import.patch
         smoketests.py)
 
 # Helper macros to help make tasks easier #
@@ -238,7 +239,6 @@ prepare() {
     0820-dont-link-with-gettext.patch \
     0830-ctypes-python-dll.patch \
     0840-gdbm-module-includes.patch \
-    0845-3.7-_abs-mingw.patch \
     0850-use-gnu_printf-in-format.patch \
     0870-mingw-fix-ssl-dont-use-enum_certificates.patch \
     0890-mingw-build-optimized-ext.patch \
@@ -277,14 +277,20 @@ prepare() {
   apply_patch_with_msg \
     1810-3.7-mpdec-mingw.patch \
     1830-mingw-implement-setenv-for-PY_COERCE_C_LOCALE.patch \
-    1840-fix-building-core-modules.patch \
     1850-disable-readline.patch \
-    1860-fix-isselectable.patch
+    1860-fix-isselectable.patch \
+    2020-use-_wcsnicmp-instead-wcsncasecmp.patch
 
   apply_patch_with_msg 2000-warnings-fixes.patch
 
   # https://github.com/python/cpython/pull/9258
   apply_patch_with_msg 1900-ctypes-dont-depend-on-internal-libffi.patch
+
+  # https://github.com/msys2/MINGW-packages/issues/5184
+  apply_patch_with_msg 2010-configure-have-inet-pton.patch
+
+  # https://github.com/msys2/MINGW-packages/issues/5155
+  apply_patch_with_msg 2030-fix-msvc9-import.patch
 
   autoreconf -vfi
 
@@ -426,26 +432,10 @@ package() {
     "${pkgdir}${MINGW_PREFIX}"/lib/python${_pybasever}/lib-dynload/_sysconfigdata*.py \
     "${pkgdir}${MINGW_PREFIX}"/lib/python${_pybasever}/smtpd.py
 
-  # Doing sysconfig relocatable as patch 0000 do it only partially
-  sed -e "s/sys.prefix + //g" \
-      -e "s/'\/bin'/sys.prefix + '\/bin'/g" \
-      -e "s/'\/include\//sys.prefix + '\/include\//g" \
-      -e "s/'\/include /sys.prefix + '\/include /g" \
-      -e "s/'\/include'/sys.prefix + '\/include'/g" \
-      -e "s/ \/include\// ' + sys.prefix + '\/include\//g" \
-      -e "s/ \/include / ' + sys.prefix + '\/include /g" \
-      -e "s/'\/lib\//sys.prefix + '\/lib\//g" \
-      -e "s/'\/lib /sys.prefix + '\/lib /g" \
-      -e "s/'\/lib'/sys.prefix + '\/lib'/g" \
-      -e "s/ \/lib\// ' + sys.prefix + '\/lib\//g" \
-      -e "s/ \/lib / ' + sys.prefix + '\/lib /g" \
-      -e "s/'\/share\//sys.prefix + '\/share\//g" \
-      -e "s/'\/share'/sys.prefix + '\/share'/g" \
-      -i "${pkgdir}${MINGW_PREFIX}"/lib/python${_pybasever}/lib-dynload/_sysconfigdata*.py
 }
 
-sha256sums=('fa7e2b8e8c9402f192ad56dc4f814089d1c4466c97d780f5e5acc02c04243d6d'
-            'fa58527f17b1c3defeb9345ef0606d937b2c6ea2746033bfe980879eefe2c50e'
+sha256sums=('da60b54064d4cfcd9c26576f6df2690e62085123826cff2e667e72a91952d318'
+            'a2e92cf57985b93bb6203b26c84140610378bd1eb57e8ab8f00e0c0f9afb7b75'
             '8b2c7d6b3d0efec48f44c1e46be25fcfb4ba6711ca49b93cf9fa40fb4f0966b6'
             'b2111d31e812b33e5cec85f6505bd730975dd242f8eb138307f71ffe0d7fdf6b'
             '7983bc803f4b845c09589b039d4dd099570e68716c339c940d785ef4785ee1a8'
@@ -487,7 +477,7 @@ sha256sums=('fa7e2b8e8c9402f192ad56dc4f814089d1c4466c97d780f5e5acc02c04243d6d'
             'a88ed0a61dcb0a860286ab1d6bf489b272a670625687924943713a58c6068a94'
             '80dabe16710799fb070dfeed071161dfd439f156e2cf79e0c5ab7d51279d342f'
             '3f743eb2e067dc0d315dee875c4525791388a2d7636f9a74cd9721002fc13b83'
-            'e7be78409c070ea2fa76a8f568d6121deaa3fc4545fc0565745c044a67376616'
+            '76340fbb1d12383cfe6abcfa7d5e4f993f98c2b03b5216c8af62219afa7405a1'
             'c64baa4c0457186269f02c74f5f58f4c56fd435384c45f778e86deac9b9f435f'
             '65454f7d338af3a41f574f87b2d5a91ec3a96d474fb61d2d5fc9f9938a7a83fb'
             '5a5e9bbe642e2c86b3feee87b14ca3c4716178266a08deaa02a79b71fd36f00f'
@@ -499,7 +489,7 @@ sha256sums=('fa7e2b8e8c9402f192ad56dc4f814089d1c4466c97d780f5e5acc02c04243d6d'
             '7aeee8c27434f4684a253b5c91ece99f01f78db04cab92739c19ff71adbe1bf0'
             '59b7abb07b3ee572668fee1ad021837187d267a715fcd5a1a4fc93276a9646ed'
             'ce32ddf6bb7876237fdfad713f1c8f1d97afa470d428d3129e1c01308f4c8302'
-            'a058a7e2471c63878283cad9f727e0e8a243f53f84140178a3c333fbd9c50103'
+            'f445523eff779faa76740eb32daf3ffb61834a6a49bd05939e61726e1174cd4b'
             '8c906d78bc2a8542e5f52fa178d398fb2c298beef8cbb5efd2d74729bee2bb47'
             '5094776bb60411f48ed57c35ccf1da76fe9aafabaf13f20ed8eb199ef5b51c66'
             'c4adc7cfc4f182c953c1792472728eac848cec0bac9526f7fab0f03a172e4c4d'
@@ -507,7 +497,6 @@ sha256sums=('fa7e2b8e8c9402f192ad56dc4f814089d1c4466c97d780f5e5acc02c04243d6d'
             'e176cd882818e857d6647a4fc08b00f353f11883f8cded1326239c3b2138b6ba'
             '4eace191297b47ebab2bf7dd68f6edaa1cb46d3f44dc86c9ebc88f96d6a46dff'
             '508ebdc995055ace5673d4734f015da4d989953f57a7ac076d04c97a79d5e1a7'
-            'c9510eea8d927f3ea1478b7e4f9f4dc652995a768fdfe85bc3f4083fa93fdc4f'
             'd37f6c6683784a5554e2065a52dc05ad55cf28ea18333acf42af421b7d4d5803'
             'e076f36172f8b4fa76d06d41fef66e73b4e64a88e91e6ecbd9fd6822a0d14b32'
             '28684b03d3bab789983163449afa9da4d910fcfe944c9ff9853feb4c672e82fc'
@@ -524,12 +513,14 @@ sha256sums=('fa7e2b8e8c9402f192ad56dc4f814089d1c4466c97d780f5e5acc02c04243d6d'
             'bc8057f54cb377d9fe3cf4e2a7d00980d32249a57471af7f94234f6258486c61'
             '204b1e14b4a9614182a68074bd66c33a4ae84134210458079d22d61d8526ff1c'
             '0d76ffdca82b978e9fda07e12351cd61f23973af204e65db69ebafce71aa7880'
-            '076a3b9890af88a3fcbbb1c3316f6ebcfef75b9f052d3fa55d0121aa766c7166'
+            '9785322e90050ad9019ce7edd1f3c549ac4ae78d0ed240ca1bffffe9de588d2e'
             'f8d3b68097cc0bc53d846cd55744dc9b311f3f32eaefb8d03c6b17cfb61485f0'
             'cdbdbfe4b8c02d58fd36db15d94425ae0b48124e709645fb717167280ff1bf15'
-            '612736b2f9b3b9a2276440d1a5cbd968f51635e8fab6b9d89c2b34947fb67216'
             '3262ce24714dc6cfea5b18d528d7f1a333128eadf5aa9c3a026131c34f082e1f'
             'bd9b934e8c1f92573115efaef6b6b04966e3222ba769511e006366d1217d34d6'
-            'e91f897e43063e0c4e52d971f5de4b5e193d9eb6a35fc3acfca1dc057a2fcd65'
+            '3231d1eb8e7a73528f03d4ef3fda645cb74a3cf78ed80de1d290484a77a89d27'
             'e3b0171303b3e28a7347a81b1110dfe42df92a87d160caf624510304d5390728'
-            'ea41f389324bf56277ef27a02f3510d22e5c88becbdb465468bdad9c15e0d229')
+            '150dc7a5c59ef82b0bf258a2cd4233f2975fb89818849de39c185ce368a124ab'
+            '2d6605515648ef3ffe53e417719d4d51a7a2a79566e26e920733422dfd3751cb'
+            '6c4b0c469f3c04e5586553b7e4e8e30e8e36163f30d4139605b7c0eddf994347'
+            '821402ddaef92140c70041b007bcf15e1cd5fe0fdb9f4f612da868382cc24585')
