--- a/mingw-w64-proj/PKGBUILD
+++ b/mingw-w64-proj/PKGBUILD
@@ -3,16 +3,17 @@
 _realname=proj
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.1.0
+pkgver=6.1.0
 pkgrel=1
 pkgdesc="Cartographic projection software (PROJ.4) (mingw-w64)"
 arch=(any)
 url="https://trac.osgeo.org/proj/"
 license=('MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-sqlite3")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-libtool")
 options=('staticlibs' 'strip')
 source=("http://download.osgeo.org/proj/${_realname}-${pkgver}.tar.gz")
-sha256sums=('6b1379a53317d9b5b8c723c1dc7bf2e3a8eb22ceb46b8807a1ce48ef65685bb3')
+sha256sums=('676165c54319d2f03da4349cbd7344eb430b225fe867a90191d848dc64788008')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
