--- a/mingw-w64-geos/PKGBUILD
+++ b/mingw-w64-geos/PKGBUILD
@@ -12,14 +12,11 @@ url="https://trac.osgeo.org/geos/"
 license=('LGPL')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-cmake")
 options=('strip' '!emptydirs')
-source=("http://download.osgeo.org/geos/geos-${pkgver}.tar.bz2"
-        "geos-3.5.0.patch")
-sha256sums=('2166e65be6d612317115bfec07827c11b403c3f303e0a7420a2106bc999d7707'
-            '206f8780b8da547d3fd1bbc3ffb827abc71ec0e5d90a217db2032fe481807992')
+source=("http://download.osgeo.org/geos/geos-${pkgver}.tar.bz2")
+sha256sums=('2166e65be6d612317115bfec07827c11b403c3f303e0a7420a2106bc999d7707')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
-  patch -Np1 -i "${srcdir}/geos-3.5.0.patch"
 }
 
 build() {
