--- a/mingw-w64-geos/PKGBUILD
+++ b/mingw-w64-geos/PKGBUILD
@@ -10,7 +10,7 @@ pkgdesc="C++ port of the Java Topology Suite (mingw-w64)"
 arch=('any')
 url="https://trac.osgeo.org/geos/"
 license=('LGPL')
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-cmake")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 options=('strip' '!emptydirs')
 source=("http://download.osgeo.org/geos/geos-${pkgver}.tar.bz2")
 sha256sums=('2166e65be6d612317115bfec07827c11b403c3f303e0a7420a2106bc999d7707')
