--- a/mingw-w64-meson/PKGBUILD
+++ b/mingw-w64-meson/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=meson
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.46.1
-pkgrel=9002
+pkgver=0.47.2
+pkgrel=1
 pkgdesc="High-productivity build system (mingw-w64)"
 arch=('any')
 url="http://mesonbuild.com/"
@@ -12,20 +12,18 @@ license=("Apache 2")
 options=('strip' 'staticlibs')
 depends=("${MINGW_PACKAGE_PREFIX}-python3"
          "${MINGW_PACKAGE_PREFIX}-ninja")
-source=(https://github.com/mesonbuild/${_realname}/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz
+source=("https://github.com/mesonbuild/${_realname}/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz"
         'color-term.patch'
         '0001-Install-scripts-without-.py-extension.patch'
         '0002-Default-to-sys.prefix-as-the-default-prefix.patch'
         '0003-Strip-the-prefix-from-all-paths-when-installing-with.patch'
-        '0001-gtk-doc-Use-LD_LIBRARY_PATH-to-modify-PATH-on-W32.patch'
-        )
-sha256sums=('19497a03e7e5b303d8d11f98789a79aba59b5ad4a81bd00f4d099be0212cee78'
-            '1615db5a0f776be83c4b6c004320d0df1dcdb71a161da37f580a129a322009a6'
+        'test.patch')
+sha256sums=('92d8afd921751261e36151643464efd3394162f69efbe8cd53e0a66b1cf395eb'
+            'edec6de6f5fa60f0737fdb25a3ac276a0187a6f961544289e5472bcb4194e954'
             '2c3fbb9d3f367d97e7262dc2991a2ef36eb06a7af08227b9e525049471d968c5'
             '4ef1e6fb0e9bd927b4646e416631b8a0a9aece763d259dbba58168bcba93f673'
-            '963a5203f3428d41e4a43ac2a42b6c9d47dcc8f3ccccbd11414fdf5ac8608e40'
-            'f956f44fef088177c27ad8cb449281253ce48fc6b4a87abcec4f8da83866583d'
-           )
+            '2093c617cf3146a4cea601e7c73400d8ec5fd52ac5cf642c4f5af2d6493b1cb1'
+            '512ca8fb13d81387da878458bae89638354fcb8a423dbbf3cd2ec7e43feff503')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -35,19 +33,20 @@ prepare() {
   patch -Np1 -i "${srcdir}"/0001-Install-scripts-without-.py-extension.patch
   patch -Np1 -i "${srcdir}"/0002-Default-to-sys.prefix-as-the-default-prefix.patch
   patch -Np1 -i "${srcdir}"/0003-Strip-the-prefix-from-all-paths-when-installing-with.patch
-
-  # https://github.com/mesonbuild/meson/issues/3307
-  patch -Np1 -i "${srcdir}"/0001-gtk-doc-Use-LD_LIBRARY_PATH-to-modify-PATH-on-W32.patch
+  
+  # https://github.com/mesonbuild/meson/issues/4083
+  patch -Np1 -i "${srcdir}"/test.patch
 }
 
 build() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  [[ -d "${srcdir}"/build-${CARCH} ]] && rm -rf "${srcdir}"/build-${CARCH}
+  cp -rf "${srcdir}"/${_realname}-${pkgver}/. "${srcdir}"/build-${CARCH} && cd "${srcdir}"/build-${CARCH}
 
   ${MINGW_PREFIX}/bin/python3 setup.py build
 }
 
 package() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${srcdir}"/build-${CARCH}
 
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   ${MINGW_PREFIX}/bin/python3 setup.py \
