--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.13.9000
+pkgver=0.14.0
 pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
@@ -23,16 +23,14 @@ options=("staticlibs" "strip" "!buildflags")
 #sha256sums=("ac2a77dd9168e9892e432c474611e86ded0be6dfe15f689c948751d37f81391a")
 #source_dir=apache-${_realname}-${pkgver}
 
-# For git version
-source=("${_realname}"::"git+https://github.com/apache/arrow")
+# Build from git (remove the #tag=... to build from master)
+source=("${_realname}"::"git+https://github.com/apache/arrow#tag=apache-arrow-${pkgver}")
 sha256sums=("SKIP")
 source_dir=${_realname}
 
 # Other stuff
 cmake_build_type=release
-meson_build_type=debugoptimized
 cpp_build_dir=build-${CARCH}-cpp
-c_glib_build_dir=build-${CARCH}-c-glib
 
 pkgver() {
   cd "$source_dir"
