arrow: cleanup a bit

--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -18,15 +18,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-gcc")
 options=("staticlibs" "strip" "!buildflags")
 
-# For released version:
-#source=("https://archive.apache.org/dist/arrow/arrow-${pkgver}/apache-arrow-${pkgver}.tar.gz")
-#sha256sums=("ac2a77dd9168e9892e432c474611e86ded0be6dfe15f689c948751d37f81391a")
-#source_dir=apache-${_realname}-${pkgver}
-
-# Build from git (remove the #tag=... to build from master)
-source=("${_realname}"::"git+https://github.com/apache/arrow#tag=apache-arrow-${pkgver}")
+# Uncomment to build from master
+#source=("${_realname}"::"git+https://github.com/apache/arrow")
+#source_dir=${_realname}
+source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/apache/arrow/archive/apache-arrow-${pkgver}.tar.gz")
+source_dir="arrow-apache-${_realname}-${pkgver}"
 sha256sums=("SKIP")
-source_dir=${_realname}
 
 pkgver() {
   cd "$source_dir"
@@ -44,7 +41,7 @@ build() {
   pushd "build-${CARCH}-cpp"
 
   # Workaround to fix static libparquet
-  export CXXFLAGS="-DARROW_STATIC"
+  # export CXXFLAGS="-DARROW_STATIC"
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake.exe \
@@ -69,6 +66,7 @@ build() {
     -DARROW_WITH_BROTLI=OFF \
     -DARROW_USE_GLOG=OFF \
     -DARROW_BUILD_UTILITIES=ON \
+    -DPARQUET_BUILD_EXECUTABLES=ON \
     -DARROW_TEST_LINKAGE="static" \
     -Ddouble-conversion_ROOT="${MINGW_PREFIX}" \
     -DThrift_ROOT="${MINGW_PREFIX}"
