--- a/mingw-w64-tesseract-ocr/PKGBUILD
+++ b/mingw-w64-tesseract-ocr/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=tesseract-ocr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.0.0
+pkgver=4.1.0
 pkgrel=1
 pkgdesc="Tesseract OCR (mingw-w64)"
 arch=('any')
@@ -20,7 +20,7 @@ options=('!libtool' 'strip')
 source=(${_realname}-${pkgver}.tar.gz::https://github.com/tesseract-ocr/tesseract/archive/${pkgver}.tar.gz
         https://github.com/tesseract-ocr/tessdata_fast/raw/master/osd.traineddata
         001-proper-include-thread.patch)
-sha256sums=('a1f5422ca49a32e5f35c54dee5112b11b99928fc9f4ee6695cdc6768d69f61dd'
+sha256sums=('5c5ed5f1a76888dc57a83704f24ae02f8319849f5c4cf19d254296978a1a1961'
             '9cf5d576fcc47564f11265841e5ca839001e7e6f38ff7f7aacf46d15a96b00ff'
             '0c8eec0552e9d3af93e84f594e71cfce0e996c630bddc6a0c2ca509f516696c9')
 
@@ -48,6 +48,7 @@ build() {
     --prefix=${MINGW_PREFIX} \
     --enable-static \
     --disable-shared \
+    --disable-openmp \
     LIBLEPT_HEADERSDIR=${MINGW_PREFIX}/include \
     "${extra_config[@]}"
 
