speed up gcc 9 build

--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -189,7 +189,7 @@ build() {
     sed -i 's,^STRIP_FOR_TARGET=.*$,STRIP_FOR_TARGET=true,g' Makefile
   fi
 
-  make all
+  make -j2 all
 
   rm -rf ${srcdir}${MINGW_PREFIX}
 
