--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -5,7 +5,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.7.183
 pkgrel=1
 pkgdesc="AWS SDK for C++"
-arch=('x86_64')
+arch=('any')
 url="https://github.com/aws/aws-sdk-cpp"
 license=('Apache')
 depends=("${MINGW_PACKAGE_PREFIX}-cmake")
