--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -11,8 +11,7 @@ license=('Apache')
 depends=("${MINGW_PACKAGE_PREFIX}-cmake")
 makedepends=("${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-curl"
-             "${MINGW_PACKAGE_PREFIX}-zlib"
-             "${MINGW_PACKAGE_PREFIX}-libutil-linux")
+             "${MINGW_PACKAGE_PREFIX}-zlib")
 source=("${pkgname}::git+https://github.com/aws/aws-sdk-cpp")
 sha256sums=('SKIP')
 
