--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -7,11 +7,13 @@ pkgrel=1
 pkgdesc="AWS SDK for C++"
 arch=('any')
 url="https://github.com/aws/aws-sdk-cpp"
-license=('Apache')
+license=('Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-cmake")
 makedepends=("${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-curl"
-             "${MINGW_PACKAGE_PREFIX}-zlib")
+             "${MINGW_PACKAGE_PREFIX}-zlib"
+             "${MINGW_PACKAGE_PREFIX}-gcc")
+options=("staticlibs" "strip" "!buildflags")
 source=("${pkgname}::git+https://github.com/aws/aws-sdk-cpp")
 sha256sums=('SKIP')
 
