Try different cmake flags

--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -31,14 +31,12 @@ build() {
 	cd build
 
 	CMAKE_FLAGS="-Wno-dev \
-		-DCMAKE_INSTALL_LIBDIR=/usr/lib \
-		-DCMAKE_INSTALL_INCLUDEDIR=/usr/include \
+    -DBUILD_ONLY=s3;core;config \
 		-DCMAKE_BUILD_TYPE=Release \
+    -DENABLE_UNITY_BUILD=ON \
 		-DENABLE_TESTING=OFF \
 		-DSTATIC_LINKING=1 \
-		-DNO_HTTP_CLIENT=1 \
 		-DMINIMIZE_SIZE=ON \
-		-DCMAKE_VERBOSE_MAKEFILE=ON \
 		-DBUILD_SHARED_LIBS=OFF"
 	cmake $CMAKE_FLAGS ..
 	make
