--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -8,8 +8,8 @@ pkgdesc="AWS SDK for C++"
 arch=('any')
 url="https://github.com/aws/aws-sdk-cpp"
 license=('Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-cmake")
-makedepends=("${MINGW_PACKAGE_PREFIX}-openssl"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-curl"
              "${MINGW_PACKAGE_PREFIX}-zlib"
              "${MINGW_PACKAGE_PREFIX}-gcc")
