--- a/mingw-w64-aws-sdk-cpp/PKGBUILD
+++ b/mingw-w64-aws-sdk-cpp/PKGBUILD
@@ -12,7 +12,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-openssl"
              "${MINGW_PACKAGE_PREFIX}-curl"
              "${MINGW_PACKAGE_PREFIX}-zlib"
-             "${MINGW_PACKAGE_PREFIX}-gcc")
+             "${MINGW_PACKAGE_PREFIX}-gcc"
+             "util-linux")
 options=("staticlibs" "strip" "!buildflags")
 source=("${pkgname}::git+https://github.com/aws/aws-sdk-cpp")
 sha256sums=('SKIP')
