--- a/mingw-w64-pcre2/PKGBUILD
+++ b/mingw-w64-pcre2/PKGBUILD
@@ -34,7 +34,8 @@ build() {
     --enable-pcre2-16 \
     --enable-pcre2-32 \
     --enable-pcre2grep-libz \
-    --enable-pcre2grep-libbz2
+    --enable-pcre2grep-libbz2 \
+    --enable-jit
 
   make
 }
