--- a/mingw-w64-udunits/PKGBUILD
+++ b/mingw-w64-udunits/PKGBUILD
@@ -17,7 +17,7 @@ options=('staticlibs' 'strip')
 build() {
   [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
   mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
-  ../${_realname}${pkgver}/configure \
+  ../UDUNITS-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --build=${MINGW_CHOST} \
     --host=${MINGW_CHOST} \
