--- a/mingw-w64-udunits/PKGBUILD
+++ b/mingw-w64-udunits/PKGBUILD
@@ -11,6 +11,7 @@ license=("custom")
 url="https://www.unidata.ucar.edu/software/udunits/"
 source=("https://github.com/Unidata/UDUNITS-2/archive/v${pkgver}.tar.gz")
 sha256sums=('74fd7fb3764ce2821870fa93e66671b7069a0c971513bf1904c6b053a4a55ed1')
+makedepends=("${MINGW_PACKAGE_PREFIX}-cmake")
 depends=("${MINGW_PACKAGE_PREFIX}-expat")
 options=('staticlibs' 'strip')
 
