--- a/mingw-w64-freetype/PKGBUILD
+++ b/mingw-w64-freetype/PKGBUILD
@@ -10,8 +10,7 @@ pkgdesc="TrueType font rendering library (mingw-w64)"
 arch=('any')
 url="https://www.freetype.org/"
 license=(GPL2+ custom:FreeType)
-depends=("${MINGW_PACKAGE_PREFIX}-bzip2"
-         "${MINGW_PACKAGE_PREFIX}-libpng"
+depends=("${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
 options=('strip' '!libtool' 'staticlibs')
@@ -50,10 +49,9 @@ build() {
     --prefix=${MINGW_PREFIX} \
     --enable-static \
     --disable-shared \
-    --disable-nls \
     --with-zlib \
-    --with-bzip2 \
     --with-png \
+    --without-bzip2 \
     --without-harfbuzz \
     --enable-freetype-config
   make
