--- a/mingw-w64-zstd/PKGBUILD
+++ b/mingw-w64-zstd/PKGBUILD
@@ -37,7 +37,10 @@ build() {
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
-  
+  extra_config+=("-DCMAKE_FIND_LIBRARY_SUFFIXES='.a'")
+  extra_config+=("-DBUILD_SHARED_LIBS=OFF")
+  extra_config+=("-DCMAKE_EXE_LINKER_FLAGS='-static'")
+
     MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake \
       -G'MSYS Makefiles' \
