--- a/mingw-w64-cmake/PKGBUILD
+++ b/mingw-w64-cmake/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=cmake
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.11.1
-pkgrel=3
+pkgver=3.15.5
+pkgrel=1
 pkgdesc="A cross-platform open-source make system (mingw-w64)"
 arch=('any')
 url="https://www.cmake.org/"
@@ -20,14 +20,14 @@ source=("https://www.cmake.org/files/v${pkgver%.*}/${_realname}-${pkgver}.tar.gz
         "0006-pkg-config-Add-dont-define-prefix-when-PKG_CONFIG_WI.patch"
         "0007-Do-not-generate-import-libs-for-exes.patch"
         "0008-Output-line-numbers-in-callstacks.patch")
-sha256sums=('57bebc6ca4d1d42c6385249d148d9216087e0fda57a47dc5c858790a70217d0c'
-            'e747f6a2de187d1ad469872432a2afd15252dafe4babf5b2c713372c864ef8ba'
+sha256sums=('fbdd7cef15c0ced06bb13024bfda0ecc0dedbcaaaa6b8a5d368c75255243beb4'
+            '1b68fe64e1b389134db44dc34368713f6e28d3463ab1e7fc3d93857c0459beb7'
             '77763df03e8a9ca66c3f9368fe7e1fc36bb041455733258d73aeb40246a61354'
-            '4402730b932e94630beecbc596fe33868338b162f200e8c0464ac71acf4b0fbe'
+            '297ad7f9ebbc13cd9439a45f6952094b5ac913de0c4eaa046441f0fa044f19fd'
             '7eb60d12b610c70413412521dcc860d1948c169e721f3525d9be99b3913dc37e'
             'b3905abed55c012108b0254c69cb4027a739f15772500b0a99c400d9dfdf50a7'
-            'c6c312f488cd8bb0c73d026c3fbbafedf64e8d01469fc94799edea0660915164'
-            '6123b49887fb09c110b2223e9230f0a84824a5d191aaa8971a6a11339c76cf52')
+            'd0aaa6fbf3e740341aaac2b43033f6c20f56a94ea0b2c509233f693cabe2a912'
+            '94642670c922c9acfade79bc567c6b28f2d2f89e27aa391b562e8c90baa49ce1')
 
 
 # Helper macros to help make tasks easier #
@@ -81,5 +81,7 @@ build() {
 
 package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
-  ./bin/cmake.exe -DCMAKE_INSTALL_PREFIX:PATH=${pkgdir}${MINGW_PREFIX} -P cmake_install.cmake
+  ./bin/cmake.exe \
+     -DCMAKE_INSTALL_PREFIX:PATH=${pkgdir}${MINGW_PREFIX} \
+     -DCMAKE_INSTALL_LOCAL_ONLY:BOOL=OFF -P cmake_install.cmake
 }
